fixed styling for user shift count

--- a/imports/components/scheduleRequest/scheduleRequest.scss
+++ b/imports/components/scheduleRequest/scheduleRequest.scss
@@ -56,11 +56,21 @@ body {
         }
 
         .riders-box {
-          display: flex;
-          .rider {
-            background-color: white;
-            font-size: 3rem;
-          }
+            display: flex;
+            justify-content: flex-start;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+
+            .rider {
+                background-color: white;
+                text-align: center;
+                flex-wrap: wrap;
+                width: 25%;
+                margin: auto;
+                font-size: 4rem;
+                overflow-y: scroll;
+            }
         }
     }
 
@@ -201,18 +211,25 @@ body {
             }
         }
     }
+
     .admin-select-box {
+        width: 90vw;
+        margin: 2% auto;
+        border-radius: 10px;
         display: flex;
         flex-direction: column;
         margin-top: auto;
         margin-top: 2%;
-        width: 100%;
         background: linear-gradient(to right, rgba(119,123,126, .9), rgba(119,123,126, .6)), url('gears.jpg');
 
         .custom-select {
             font-size: 2rem;
             margin-top: auto;
             width: 100%;
+        }
+
+        h1 {
+            text-align: center;
         }
     }
 
@@ -254,6 +271,24 @@ body {
 
             .date-input {
                 font-size: 2rem;
+            }
+        }
+
+        .riders-box {
+            display: flex;
+            justify-content: flex-start;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+
+            .rider {
+                background-color: white;
+                text-align: center;
+                flex-wrap: wrap;
+                width: 25%;
+                margin: auto;
+                font-size: 4rem;
+                overflow-y: scroll;
             }
         }
     }
@@ -301,7 +336,7 @@ body {
             }
 
             .day-shift {
-                height: 30vh;
+                height: 50vh;
                 border-radius: 5px;
                 background: linear-gradient(to bottom, rgba(155, 203, 190, .8), rgba(155, 203, 190, .5)), url('crank_arm.jpg');
                 background-position: center;
@@ -312,7 +347,7 @@ body {
             }
 
             .night-shift {
-                height: 50vh;
+                height: 90vh;
                 background: linear-gradient(to bottom, rgba(131, 172, 189, .8), rgba(131, 172, 189, .5)), url('brake_rotate.jpg');
                 background-position: center;
                 background-size: cover;
